# vps1777

./: .env.example  .gitignore  2026-07-14-084038-nella-seguente-cartella-ci-sono-diversi-file-ho.txt  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SELF_UPDATE_BRIEF.md  compose.build.yaml  compose.dev.yaml  compose.ingress.caddy.yaml  compose.ingress.cloudflared.yaml  compose.ingress.tailscale.yaml  compose.onboarding.yaml  compose.ops.backup.yaml  compose.ops.portainer.yaml  compose.ops.watchtower.yaml  compose.yaml  deploy.sh  features.yaml  setup.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  trivy.yml  verify-features.yml
docs/: ARCHITECTURE.md  ARCHIVE.md  BACKUP-RESTORE.md  FEATURES-METODO.md  INGRESS.md  INSTALL.md  MINIAPP.md  NB1777.md  ONBOARDING.md  OPS.md  PLUGINS.md  SECRETS.md  SELF_UPDATE_PLAN.md  TROUBLESHOOTING.md  UPDATE.md
ingress/: Caddyfile
installer/: README.md  engine.py  installer.py  launch.bat  launch.sh  ui.html
migrations/: README.md
plugins/: README.md
plugins/example-bot/: Dockerfile  README.md  compose.example-bot.yaml  pyproject.toml
plugins/example-bot/app/: __init__.py  __main__.py
plugins/example-mcp/: Dockerfile  README.md  compose.example-mcp.yaml  pyproject.toml
plugins/example-mcp/app/: __init__.py  __main__.py
secrets/: README.md
security/: check_findings.py  check_no_leaks.py  findings.yml
services/archive-mcp/: Dockerfile  README.md  pyproject.toml
services/archive-mcp/app/: __init__.py  __main__.py  db.py  fts.py  server.py  settings.py
services/archive-mcp/tests/: test_fts.py
services/gateway/: Dockerfile  README.md  pyproject.toml
services/gateway/app/: __init__.py  __main__.py  admin.py  admin_core.py  archive_indexer.py  asgi_security.py  audit.py  jwt_helpers.py  logredact.py  mcp_client.py  miniapp.py  miniapp_core.py  nlm_client.py  oauth.py  onboarding.py  proxy.py  ratelimit.py  routes.py  security.py  settings.py
services/gateway/tests/: test_admin_core.py  test_archive_indexer.py  test_asgi_security.py  test_audit.py  test_internal_archive_description.py  test_logredact.py  test_miniapp_core.py  test_oauth_consent.py  test_ratelimit.py
services/nb1777-bot/: Dockerfile  README.md  pyproject.toml
services/nb1777-bot/app/: __init__.py  __main__.py  bot.py  settings.py
services/nb1777-mcp/: Dockerfile  README.md  pyproject.toml
services/nb1777-mcp/app/: __init__.py  __main__.py  auth.py  canonical.py  core.py  ingest.py  memoria.py  nlm_profile.py  server.py  settings.py  statecard.py
services/nb1777-mcp/tests/: test_canonical.py  test_core_argv.py  test_memoria.py  test_nlm_profile.py  test_ocr_cleanup.py  test_source_cli_contract.py  test_statecard.py  test_studio_id.py
systemd/: vps1777-auto-update.service  vps1777-auto-update.timer  vps1777-check-update.service  vps1777-check-update.timer  vps1777-secrets-check.service  vps1777-secrets-check.timer  vps1777-update.path  vps1777-update.service
tools/: backup-container-setup.sh  backup.sh  bootstrap.sh  collaudo-quadratura.py  restore.sh  rotate-secret.sh  verify-features.py  vps1777.py
(+2 files in other folders)
