[project]
name = "vps1777-plugin-example-bot"
version = "0.1.0"
description = "Scheletro bot Telegram plugin per vps1777"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "python-telegram-bot>=21.7",
    "pydantic-settings>=2.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
