[project]
name = "vps1777-plugin-example-mcp"
version = "0.1.0"
description = "Scheletro MCP plugin per vps1777"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "fastmcp>=2.0.0",
    "pydantic-settings>=2.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
