[project]
name = "vps1777-archive-mcp"
version = "0.1.0"
description = "vps1777 archive-mcp — FTS5 multi-DB MCP server (claude.ai + Claude Code)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "uvicorn[standard]>=0.32.0",
    "starlette>=0.45.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
