[project]
name = "vps1777-nb1777-bot"
version = "0.1.0"
description = "vps1777 nb1777-bot — Telegram bot per NotebookLM"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "python-telegram-bot>=21.7",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
