[project]
name = "vps1777-nb1777-mcp"
version = "0.1.0"
description = "vps1777 nb1777-mcp — NotebookLM wrapper via nlm CLI"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "mcp>=1.2.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "uvicorn[standard]>=0.32.0",
    "starlette>=0.45.0",
    "notebooklm-mcp-cli>=0.7.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
